11. При оприходовании граза складом и уехала Фура, со склада нужно минусануть вес этого груза